# factorization-diagrams

./: README.md  factorization-diagrams.cabal
src/: Main.hs
